    Fixed: VsFTPd doesn't reopen xferlog file automatically when the file has been removed, leading to traffic data loss
    Fixed: VsFTPD doesn't support non-ascii characters in FTP usernames
    Fixed: When the --skip-distro-packages installer option is set, the vsftpd local package shouldn't be rebuilt
    Removed: /var/log/proftpd/ftp_traff.log custom log. Traffic data are now pulled from /var/log/proftpd/xferlog

VLOGGER
    Fixed: Avoid SELECT queries while dump of traffic data
    Fixed: SQL statement must be prepared once per dump process
    Fixed: Wrong SQL user host (localhost instead of 127.0.0.1)

YOUTRACK
    IP-0931 Unexpected error on protected area creation
    IP-1231 Default SPF DNS resource records should be overrideable
    IP-1365 Check for IPv6 support when installing services
    IP-1402 ProFTPD doesn't restart properly - killed (signal 15) - Wheezy/Precise/Trusty
    IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
    IP-1510 VsFTPd - Use of uninitialized value $tmpFile
    IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install
    IP-1513 Autoreply - Do not autoreply to messages marked as SPAM
    IP-1514 Could not install i-MSCP on Ubuntu Trusty Thar in some contexts
    IP-1525 ifconfig output format has changed in latest versions
    IP-1527 Wrong syntax in the VsFTPd uninstaller, leading to an i-MSCP uninstallation failure
    IP-1530 Nginx - Failed to load resource: net::ERR_INCOMPLETE_CHUNKED_ENCODING
    IP-1533 i-MSCP is not compatible with servers on which IPv6 stack is disabled

------------------------------------------------------------------------------------------------------------------------
Older release series
------------------------------------------------------------------------------------------------------------------------

See ./docs/Changelog-x.x.x files