@@ -56,7 +56,7 @@ class iMSCP_Update_Database extends iMSCP_Update
     /**
      * @var int Last database update revision
      */
-    protected $lastUpdate = '223';
+    protected $lastUpdate = '224';
 
     /**
      * Singleton - Make new unavailable
@@ -3219,7 +3219,7 @@ class iMSCP_Update_Database extends iMSCP_Update
 
     /**
      * Wrong value for LOG_LEVEL configuration parameter
-     * 
+     *
      * @return void
      */
     protected function r223()
@@ -3227,6 +3227,55 @@ class iMSCP_Update_Database extends iMSCP_Update
         if (isset($this->dbConfig['LOG_LEVEL']) && preg_match('/\D/', $this->dbConfig['LOG_LEVEL'])) {
             $this->dbConfig['LOG_LEVEL'] = defined($this->dbConfig['LOG_LEVEL'])
                 ? constant($this->dbConfig['LOG_LEVEL']) : E_USER_ERROR;
+        }
+    }
+
+    /*
+    * #IP-1395: Domain redirect feature - Missing URL path separator
+    *
+    * @throws Zend_Uri_Exception
+    * @throws iMSCP_Exception_Database
+    * @throws iMSCP_Uri_Exception
+    */
+    protected function r224()
+    {
+        $stmt = exec_query("SELECT alias_id, url_forward FROM domain_aliasses WHERE url_forward <> 'no'");
+
+        while ($row = $stmt->fetchRow()) {
+            $uri = iMSCP_Uri_Redirect::fromString($row['url_forward']);
+            $uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/';
+            $uri->setPath($uriPath);
+            exec_query(
+                'UPDATE domain_aliasses SET url_forward = ? WHERE alias_id = ?', array($uri->getUri(), $row['alias_id'])
+            );
+        }
+
+        $stmt = exec_query(
+            "SELECT subdomain_id, subdomain_url_forward FROM subdomain WHERE subdomain_url_forward <> 'no'"
+        );
+
+        while ($row = $stmt->fetchRow()) {
+            $uri = iMSCP_Uri_Redirect::fromString($row['subdomain_url_forward']);
+            $uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/';
+            $uri->setPath($uriPath);
+            exec_query('UPDATE subdomain SET subdomain_url_forward = ? WHERE subdomain_id = ?', array(
+                $uri->getUri(), $row['subdomain_id']
+            ));
+        }
+
+        $stmt = exec_query(
+            "
+                SELECT subdomain_alias_id, subdomain_alias_url_forward FROM subdomain_alias
+                WHERE subdomain_alias_url_forward <> 'no'
+            "
+        );
+        while ($row = $stmt->fetchRow()) {
+            $uri = iMSCP_Uri_Redirect::fromString($row['subdomain_alias_url_forward']);
+            $uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/';
+            $uri->setPath($uriPath);
+            exec_query('UPDATE subdomain_alias SET subdomain_alias_url_forward = ? WHERE subdomain_alias_id = ?', array(
+                $uri->getUri(), $row['subdomain_alias_id']
+            ));
         }
     }
 }
