@@ -174,6 +174,9 @@ function addDomainAlias()
                 throw new iMSCP_Exception(tr('Forward URL %s is not valid.', "<strong>$forwardUrl</strong>"));
             }
 
+            $uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/'; // normalize path
+            $uri->setPath($uriPath);
+
             $uri->setHost(encode_idna($uri->getHost()));
 
             if ($uri->getHost() == $domainAliasNameAscii && $uri->getPath() == '/') {
