@@ -232,6 +232,9 @@ function client_addSubdomain()
 
                 $uri->setHost(encode_idna($uri->getHost()));
 
+                $uriPath = rtrim(preg_replace('#/+#', '/', $uri->getPath()), '/') . '/'; // normalize path
+                $uri->setPath($uriPath);
+
                 if ($uri->getHost() == $subdomainNameAscii && $uri->getPath() == '/') {
                     throw new iMSCP_Exception(
                         tr('Forward URL %s is not valid.', "<strong>$forwardUrl</strong>") . ' ' .
